added content to index.html and created database file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Serwis komputerowy</title>
 </head>
 <body>
+
+    <header>
+            <a href="news.html">Wiadomości</a>
+            <a href="loggin/login.php">Zaloguj się</a>
+            <a href="loggin/registration.php">Zarejestruj się</a>
+    </header>
+    
+    <div class="content">
+    <h1>Kim jesteśmy?</h1> 
+    <p>Jesteśmy firmą zajmującą się naprawą, konfiguracją i eksploatacją komputerów. Możesz się do nas zgłosić z każdym problemem który dotyczy twojego sprzętu!</p>
+
+    </div>
+
     
 </body>
 </html>
