Added login and stared registration

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <header>
             <a href="news.html">Wiadomości</a>
-            <a href="loggin/login.php">Zaloguj się</a>
-            <a href="loggin/registration.php">Zarejestruj się</a>
+            <a href="loggin/login.html">Zaloguj się</a>
+            <a href="loggin/registration.html">Zarejestruj się</a>
     </header>
     
     <div class="content">
