--- a/loggin/login.html
+++ b/loggin/login.html
@@ -17,6 +17,6 @@
             <p><input type="submit" value="Zaloguj"></p>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
