--- a/loggin/registration.html
+++ b/loggin/registration.html
@@ -9,17 +9,18 @@
 <body>
 
     <div>
-       <form action="">
+       <form action="" id="rejestracja">
         <h1>Podaj swoje dane</h1>
-            <p><input type="text" placeholder="Imię" name="imie"></p>
-            <p><input type="text" placeholder="Nazwisko" name="nazwisko"></p>
-            <p style="display: flex; flex-direction: row; align-items: center; justify-content: center;">Numer telefonu <input style="margin-left: 5px;" type="number" name="nu_tel" maxlength="3">-<input type="number" maxlength="3">-<input type="number" maxlength="3">
-            <p><input type="email" name="email" placeholder="Adres email"></p>
-            <p><input type="password" name="haslo" placeholder="Hasło"></p>
-            <p><input type="password" placeholder="Powtórz hasło"></p>
-            <p><input type="submit" value="Zarejestruj się"></p>
+            <p><input id="imie" type="text" placeholder="Imię" name="imie"></p>
+            <p><input id="nazwisko" type="text" placeholder="Nazwisko" name="nazwisko"></p>
+            <p style="display: flex; flex-direction: row; align-items: center; justify-content: center;">Numer telefonu <input style="margin-left: 5px;" type="number" name="num_tel" max="3">-<input type="number" maxlength="3">-<input id="nr_tel" type="number" maxlength="3">
+            <p><input id="email" type="email" name="email" autocomplete="username" placeholder="Adres email"></p>
+            <p><input id="password" autocomplete="new-password" type="password" name="haslo" placeholder="Hasło"></p>
+            <p><input id="repeatPassword" autocomplete="new-password" type="password" placeholder="Powtórz hasło"></p>
+            <p><input id="submit" type="submit" value="Zarejestruj się"></p>
+            <p id="err"></p>
         </form>
     </div>
-    
+   <script src="registration.js"></script> 
 </body>
 </html>
