--- a/loggin/registration.html
+++ b/loggin/registration.html
@@ -9,12 +9,12 @@
 <body>
 
     <div>
-       <form action="checkCredentials.php" method="post" id="rejestracja">
+       <form action="" method="post" id="rejestracja">
         <h1>Podaj swoje dane</h1>
             <p><input id="imie" type="text" placeholder="Imię" name="imie"></p>
             <p><input id="nazwisko" type="text" placeholder="Nazwisko" name="nazwisko"></p>
-            <p style="display: flex; flex-direction: row; align-items: center; justify-content: center;">Numer telefonu <input name="nr_tel1" style="margin-left: 5px;" type="number"  maxlength="3">-<input type="number" maxlength="3" name="nr_tel2">-<input id="nr_tel" name="nr_tel3" type="number" maxlength="3">
             <p><input id="email" type="email" name="email" autocomplete="username" placeholder="Adres email"></p>
+            <p><input type="number" style="width: 95%;" name="nr_tel" id="nr_tel" maxlength="9" placeholder="Numer telefonu" min="0"></p>
             <p><input id="password" autocomplete="new-password" type="password" name="haslo" placeholder="Hasło"></p>
             <p><input id="repeatPassword" autocomplete="new-password" type="password" placeholder="Powtórz hasło"></p>
             <p><input id="submit" type="submit" value="Zarejestruj się"></p>
