started login functionality

--- a/loggin/login.html
+++ b/loggin/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="content">
-        <form action="" id="logowanie">
+        <form action="login.php" id="logowanie">
             <h1>Podaj swoje dane!</h1>
             <p><input id="login" type="text" placeholder="login"></p>
             <p><input id="haslo" type="password" placeholder="hasło">  </p>
