--- a/loggin/registration.html
+++ b/loggin/registration.html
@@ -9,7 +9,7 @@
 <body>
 
     <div>
-       <form action="" method="post" id="rejestracja">
+       <form action="checkCredentials.php" method="post" id="rejestracja">
         <h1>Podaj swoje dane</h1>
             <p><input id="imie" type="text" placeholder="Imię" name="imie"></p>
             <p><input id="nazwisko" type="text" placeholder="Nazwisko" name="nazwisko"></p>
