--- a/loggin/login.html
+++ b/loggin/login.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <header>
+        <a href="../news.html">Wiadomości</a>
+        <a href="./registration.html">Zarejestruj się</a>
+        <a href="../index.html">Strona główna</a>
+    </header>
+
     <div class="content">
         <form action="login.php" id="logowanie">
             <h1>Podaj swoje dane!</h1>
