--- a/loggin/registration.html
+++ b/loggin/registration.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <header>
+        <a href="../news.html">Wiadomości</a>
+        <a href="../loggin/login.html">Zaloguj się</a>
+        <a href="../index.html">Strona główna</a>
+    </header>
+
     <div>
        <form action="checkCredentials.php" method="post" id="rejestracja">
         <h1>Podaj swoje dane</h1>
