--- a/loggin/login.html
+++ b/loggin/login.html
@@ -9,20 +9,17 @@
 <body>
 
     <header>
-        <a href="../news.html">Wiadomości</a>
         <a href="./registration.html">Zarejestruj się</a>
         <a href="../index.html">Strona główna</a>
     </header>
 
-    <div class="content">
         <form action="login.php" id="logowanie">
             <h1>Podaj swoje dane!</h1>
-            <p><input id="login" type="text" placeholder="login"></p>
+            <p><input id="login" type="text" placeholder="Adres e-mail"></p>
             <p><input id="haslo" type="password" placeholder="hasło">  </p>
             <p id="err"></p>
             <p><input type="submit" value="Zaloguj"></p>
         </form>
-    </div>
     <script src="login.js"></script>
 </body>
 </html>
