Fixed login validation

--- a/loggin/login.html
+++ b/loggin/login.html
@@ -15,8 +15,8 @@
 
         <form action="login.php" id="logowanie">
             <h1>Podaj swoje dane!</h1>
-            <p><input id="login" type="text" placeholder="Adres e-mail"></p>
-            <p><input id="haslo" type="password" placeholder="hasło">  </p>
+            <p><input id="login" type="text" placeholder="Adres e-mail" autocomplete="email"></p>
+            <p><input id="haslo" type="password" placeholder="hasło" autocomplete="current-password">  </p>
             <p id="err"></p>
             <p><input type="submit" value="Zaloguj"></p>
         </form>
