--- a/loggin/registration.html
+++ b/loggin/registration.html
@@ -13,7 +13,7 @@
         <a href="../loggin/login.html">Zaloguj się</a>
     </header>
 
-       <form action="checkCredentias.php" method="post" id="rejestracja">
+       <form action="./checkCredentials.php" method="post" id="rejestracja">
         <h1>Podaj swoje dane</h1>
             <p><input id="imie" type="text" placeholder="Imię" name="imie"></p>
             <p><input id="nazwisko" type="text" placeholder="Nazwisko" name="nazwisko"></p>
